<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="plv_scene_login_toast_cloudclass_no_support_type" translatable="false">云课堂场景仅支持三分屏和纯视频频道类型</string>
    <string name="plv_scene_login_toast_cloudclass_login_live_failed" translatable="false">启动云课堂直播失败</string>
    <string name="plv_scene_login_toast_cloudclass_login_playback_failed" translatable="false">启动云课堂回放失败</string>
    <string name="plv_scene_login_toast_cloudclass_loing_no_support_vod_playback" translatable="false">三分屏回放不支持点播列表回放</string>
    <string name="plv_scene_login_toast_liveecommerce_no_support_type" translatable="false">直播带货场景仅支持纯视频频道类型</string>
    <string name="plv_scene_login_toast_liveecommerce_login_live_failed" translatable="false">启动直播带货直播失败</string>
    <string name="plv_scene_login_toast_liveecommerce_login_playback_failed" translatable="false">启动直播带货回放失败</string>
    <string name="plv_scene_login_toast_streamer_no_support_type" translatable="false">手机开播场景仅支持三分屏和纯视频频道类型</string>
    <string name="plv_scene_login_toast_login_failed_channelid_or_pwd_empty" translatable="false">登录频道号和密码不能为空</string>
    <string name="plv_scene_login_toast_login_success" translatable="false">登录成功</string>
    <string name="plv_player_toast_no_live">Not Live</string>
    <string name="plv_player_toast_live_end">Live ended</string>
    <string name="plv_player_audio_play_mode">Only sound</string>
    <string name="plv_player_video_play_mode">Play video</string>
    <string name="plv_player_video_live_no_stream">No live streaming at the moment</string>
    <string name="plv_player_video_playback_no_stream">Replay video loading error, please try again</string>
    <string name="plv_player_video_audio_mode_now">Currently in audio mode</string>
    <string name="plv_player_controller_reopen_floating_view">The floating window can be reopened from here</string>
    <string name="plv_player_audio_mode">Audio mode</string>
    <string name="plv_player_video_mode">Video mode</string>
    <string name="plv_player_route">Line</string>
    <string name="plv_player_definition">Quality</string>
    <string name="plv_player_mode">Mode</string>
    <string name="plv_player_floating">Floating mode</string>
    <string name="plv_player_floating_permission_apply_tips">Enable floating window permission in Settings to use this feature\? Go enable now\?</string>
    <string name="plv_player_change_definition">Switch quality</string>
    <string name="plv_player_low_latency">Undelayed</string>
    <string name="plv_player_normal_latency">Normal</string>
    <string name="plv_player_speed">Rate</string>
    <string name="plv_player_change_route">Switch Line</string>
    <string name="plv_player_route_1">Line 1</string>
    <string name="plv_player_route_2">Line 2</string>
    <string name="plv_player_route_3">Line 3</string>
    <string name="plv_player_route_n">Line %s</string>
    <string name="plv_player_refresh">Refresh</string>
    <string name="plv_player_floating_playing">The floating window is playing</string>
    <string name="plv_player_continue_play_tips_f">You last viewed on<xliff:g>&#160;</xliff:g></string>
    <string name="plv_player_continue_play_tips_s">, Auto resumed playback for you</string>
    <string name="plv_player_audio_mode_playing">Audio playing</string>
    <string name="plv_player_playing">Playing</string>
    <string name="plv_player_advertising_count_down">Advertising time<xliff:g> : %ss</xliff:g></string>
    <string name="plv_player_start_live_count_down">Countdown: %s</string>
    <string name="plv_player_viewer_count">%s views</string>
    <string name="plv_player_viewer_online_count">%s online</string>
    <string name="plv_player_network_bad">Your current network status is unstable. It is recommended that you switch to</string>
    <string name="plv_player_translating">Converting, please wait</string>
    <string name="plv_player_latency">Delay</string>
    <string name="plv_player_speed_2">Rate</string>
    <string name="plv_player_network_bad_2">Your network status is not good, you can try switching networks</string>
    <string name="plv_player_network_bad_3">Your network status is bad, try</string>
    <string name="plv_player_network_bad_4">Your network status is bad, you can try More>Mode<xliff:g>&#160;</xliff:g></string>
    <string name="plv_player_change_to_normal_latency">switch to normal latency</string>
    <string name="plv_player_change_definition_2">Switched to %s</string>
    <string name="plv_player_live_load_slow_hint">The video is loading slowly, please switch the line or exit and re-enter</string>
    <string name="plv_player_playback_load_slow_hint">The video is loading slowly, please refresh or exit and re-enter</string>
    <string name="plv_player_restrict_watch_hint">Viewing restrictions exist, currently does not support access to %s</string>
    <string name="plv_player_suggest_exit_hint">Video loading failed, please exit and re-enter %s</string>
    <string name="plv_player_suggest_refresh_hint">The video failed to load, please check the network or exit and re-enter %s</string>
    <string name="plv_player_error_code">(Error code: %s)</string>
    <string name="plv_player_marquee_verify_error">Marquee verification failed</string>
    <string name="plv_player_stage_head_ad">Leader ad</string>
    <string name="plv_player_stage_tail_ad">End ad</string>
    <string name="plv_player_stage_teaser">Warmup video</string>
    <string name="plv_player_stage_main">Main video</string>
    <string name="plv_player_error">playback error\n</string>
    <string name="plv_player_retry_fail">Retry failed</string>
    <string name="plv_player_retry">Retry</string>
    <string name="plv_player_exit_fullscreen">Exit fullscreen</string>
    <string name="plv_player_enter_fullscreen">Entered fullscreen</string>
    <string name="plv_player_layout_adjusted">Layout adjusted</string>
    <string name="plv_player_open_barrage">Barrage enabled</string>
    <string name="plv_player_close_barrage">Barrage disabled</string>
    <string name="plv_download_downloading">Downloading</string>
    <string name="plv_download_downloaded">Downloaded</string>
    <string name="plv_download_at_once">Download now</string>
    <string name="plv_download_fail">Download failed</string>
    <string name="plv_download_downloading_2">Downloading %s%%</string>
    <string name="plv_download_name">Download</string>
    <string name="plv_download_video">Download video</string>
    <string name="plv_download_view_list">View download list</string>
    <string name="plv_download_un_download">Not downloaded</string>
    <string name="plv_download_waiting">Waiting</string>
    <string name="plv_download_pausing">Paused</string>
    <string name="plv_danmu_speed_slower">very slow</string>
    <string name="plv_danmu_speed_slow">slow</string>
    <string name="plv_danmu_speed_normal">normal</string>
    <string name="plv_danmu_speed_quick">fast</string>
    <string name="plv_danmu_speed_fast">very fast</string>
    <string name="plv_danmu_speed">Barrage Speed</string>
    <string name="plv_chat_toast_reconnecting">Chatroom reconnecting</string>
    <string name="plv_chat_toast_logging">Chatroom logging</string>
    <string name="plv_chat_toast_reconnect_success">Chatroom reconnected successfully</string>
    <string name="plv_chat_toast_login_success">Chatroom login successful</string>
    <string name="plv_chat_toast_login_failed">Chatroom login failed</string>
    <string name="plv_chat_toast_been_kicked">You have been kicked out of the chatroom by the administrator!</string>
    <string name="plv_chat_toast_kicked_streamer">Channel has been banned from live streaming</string>
    <string name="plv_chat_toast_account_login_elsewhere">The current account has been logged in elsewhere, you will be logged out of this live room</string>
    <string name="plv_chat_toast_send_msg_success">Send successful</string>
    <string name="plv_chat_toast_post_msg_success">Post successful</string>
    <string name="plv_chat_toast_send_msg_failed">Send failed</string>
    <string name="plv_chat_toast_send_msg_failed_param">Send failed: %s</string>
    <string name="plv_chat_toast_send_quiz_success">Question successful</string>
    <string name="plv_chat_toast_send_quiz_failed">Question failed</string>
    <string name="plv_chat_toast_send_text_empty">The sending content cannot be empty!</string>
    <string name="plv_chat_toast_history_all_loaded">History has been fully loaded!</string>
    <string name="plv_chat_toast_history_load_failed">History loading failed</string>
    <string name="plv_chat_view_all_message">Look all</string>
    <string name="plv_chat_view_special_message">Presenter</string>
    <string name="plv_chat_view_close_effect">Hide animation</string>
    <string name="plv_chat_view_show_effect">Show animation</string>
    <string name="plv_chat_toast_chatroom_close">Chatroom has been closed</string>
    <string name="plv_chat_toast_chatroom_open">Chatroom has been opened</string>
    <string name="plv_chat_toast_focus_mode_close">Focus mode is off</string>
    <string name="plv_chat_toast_focus_mode_open">Focus mode is on</string>
    <string name="plv_chat_chooser_sel_img">Select Image</string>
    <string name="plv_chat_send_img_error_tip_permission_denied">Storage permission denied. Please enable it in App Permissions</string>
    <string name="plv_chat_send_img_error_tip_permission_cancel">Please allow storage permission before sending pictures</string>
    <string name="plv_chat_cannot_retrieve_selected_image">The selected image could not be retrieved</string>
    <string name="plv_chat_connect_fail_and_cannot_input">Chatroom connection failed. Please try refreshing to resolve. Contact admin if issue persists.</string>
    <string name="plv_chat_restrict_max_viewer_hint">The live room is too popular, please come back later</string>
    <string name="plv_chat_me">(me)</string>
    <string name="plv_chat_me_2">(me)</string>
    <string name="plv_chat_playback_tips">Chat replay is on, showing historical messages</string>
    <string name="plv_chat_view_new_msg">News</string>
    <string name="plv_chat_quiz_channel">Question Channel</string>
    <string name="plv_chat_quiz_new_msg_tips">News</string>
    <string name="plv_chat_send">Send</string>
    <string name="plv_chat_copy">Copy</string>
    <string name="plv_chat_full_text">Full text</string>
    <string name="plv_chat_input_tips_chatroom_close">Chatroom temporarily closed</string>
    <string name="plv_chat_input_tips_chat">Join the chat</string>
    <string name="plv_chat_ban">Ban</string>
    <string name="plv_chat_kick">Kick out</string>
    <string name="plv_chat_pin">Pin</string>
    <string name="plv_chat_answer">Reply</string>
    <string name="plv_live_language_switch_zh" translatable="false">简体中文-ZH</string>
    <string name="plv_live_language_switch_en" translatable="false">English-EN</string>
    <string name="plv_live_language_switch_tc" translatable="false">繁體中文-TC</string>
    <string name="plv_live_language_switch_jp" translatable="false">日本語-JP</string>
    <string name="plv_live_language_switch_ko" translatable="false">한국인-KO</string>
    <string name="plv_common_dialog_cancel">Cancel</string>
    <string name="plv_common_dialog_confirm_5">OK</string>
    <string name="plv_cast_search_device_title">Invest in TV</string>
    <string name="plv_cast_search_device_result_title">The following devices have been found</string>
    <string name="plv_cast_search_device_result_not_found">No screen casting devices were found, please try again</string>
    <string name="plv_cast_search_device_retry">Retry</string>
    <string name="plv_streamer_check_voice_risk_tips">Risk Warning</string>
    <string name="plv_streamer_check_voice_read_new_tips">View new reminders</string>
    <string name="plv_kick_banned_users_kick_hint">Kicked users</string>
    <string name="plv_kick_banned_users_no_kick">No kicked users</string>
</resources>