<?xml version="1.0" encoding="utf-8"?>
<com.easefun.polyv.livecommon.ui.widget.PLVTriangleIndicateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plv_chat_message_popup_menu_layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:plv_indicateColor="#BF1B202D"
    app:plv_rectRadius="4dp"
    app:plv_triangleHeight="8.5dp"
    app:plv_triangleMarginType="anchor"
    app:plv_trianglePosition="bottom"
    app:plv_triangleWidth="17dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:divider="@drawable/plv_chat_message_popup_menu_layout_divider"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/plv_chat_message_popup_action_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plv_chat_copy"
            android:textColor="#F0F1F5" />

        <TextView
            android:id="@+id/plv_chat_message_popup_action_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plv_chat_answer"
            android:textColor="#F0F1F5" />

        <TextView
            android:id="@+id/plv_chat_message_popup_action_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plv_chat_pin"
            android:textColor="#F0F1F5" />

        <TextView
            android:id="@+id/plv_chat_message_popup_action_ban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plv_chat_ban"
            android:textColor="#F0F1F5" />

        <TextView
            android:id="@+id/plv_chat_message_popup_action_kick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plv_chat_kick"
            android:textColor="#F0F1F5" />

    </LinearLayout>

</com.easefun.polyv.livecommon.ui.widget.PLVTriangleIndicateLayout>